<resources>
    <string name="app_name">News Feed</string>
    <string name="api_key">446806dcb563414287e05ab8e7e8aad9</string>
    <string name="zero_articles_found">No article found. Try Again...</string>
    <string name="retry">Retry</string>
    <string name="app_info">App Info</string>
    <string name="search">Search...</string>
    <string name="api_date_format">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="date_display_format">dd/MM/yyyy HH:mm aa</string>
    <string name="by">By -</string>
    <string name="updated_on">Updated on -</string>
    <string name="by_source">By - Source</string>
    <string name="loading">Loading...</string>
    <string name="source"><u>Source</u></string>
    <string name="settings">Settings</string>
    <string name="news_feed">News Feed</string>
</resources>
